--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="Dhiraj Beri Portfolio" />
-    <meta name="description"
-        content="Hi, I am a Software Developer and a Blogger who likes to write Technical Blogs and contribute to Open Source." />
+    <meta name="description" content="Hi, I am a Software Developer and a Blogger who likes to write Technical Blogs and contribute to Open Source." />
 
     <!--Page Title-->
     <title>Dhiraj Beri's Portfolio</title>
