--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
                     <!--Page Heading-->
                     <div class="page-heading">
                         <span class="icon"><i class="lnr lnr-envelope"></i></span>
-                        <h2>Contact Me.</h2>
+                        <h2>Contact Me</h2>
                     </div>
 
                     <!--Form Row-->
