--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="header-main" data-simplebar>
                     <div class="image-container">
                         <h2 class="header-name">Dhiraj Beri</h2>
-                        <img src="img/profile-img.jpg" alt="profile-pic">
+                        <img src="img/dhiraj_mac.jpg" alt="profile-pic">
                     </div>
 
                     <!--Nav Menus-->
