--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
             <!--Banner Section Start-->
             <section id="home" class="banner-section pt-page"
-                style="background-image: url('img/background/home-bg.jpg')">
+                style="background-image: url('img/background/bg.jpg')">
 
                 <div class="banner-content">
                     <!--Banner Text-->
