remove unnecessary code form about and contact, portfolio added

--- a/property.html
+++ b/property.html
@@ -11,15 +11,25 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-10 offset-md-1 mb-40">
-                    <h1 class="title mb-30">Project Title</h1>
-                    <p class="mb-30">Adipisicing tempore architecto quae est similique Hic iste explicabo vitae
-                        temporibus quidem. Porro itaque quas expedita fugiat accusantium, harum. Quasi provident
-                        necessitatibus omnis vel sunt Quia consectetur vel exercitationem debitis aut Excepturi ut
-                        possimus suscipit in reprehenderit. Eaque natus quia! </p>
+                    <h1 class="title mb-30">Property Scrapper</h1>
+
+                    <p class="mb-30">Property details scraper is the automation and scraping project in which we had
+                        automated the n number of property websites, as the code was written to open the
+                        property-related websites using the automated multiple chrome browsers as multi-threading was
+                        used to open more than one browser instance at a time, and once the links were opened, we have
+                        added the functionality to scrape all those listed property details using the beautiful Soup and
+                        saving all of them in the database in an organized way.</p>
+
+                    <p class="mb-30">And on successful completion or any cause of the error, the admin was notified
+                        directly through the slack, which we integrated into the code. </p>
+
+                    <p class="mb-30">Along with that, we had also created the API endpoints, from where users can
+                        retrieve and filter out the property details directly from the server.</p>
+
+
                     <ul class="information">
-                        <li><span class="title">Client:</span> Themeforest</li>
-                        <li><span class="title">Website:</span> envato.com</li>
-                        <li><span class="title">Category:</span> web, creative, photography</li>
+                        <li><span class="title">Category:</span> Scraping, Automation</li>
+                        <li><span class="title">Technology:</span> Django, Selenium</li>
                     </ul>
 
                     <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
