--- a/autodeploy.html
+++ b/autodeploy.html
@@ -11,15 +11,11 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-10 offset-md-1 mb-40">
-                    <h1 class="title mb-30">Project Title</h1>
-                    <p class="mb-30">Adipisicing tempore architecto quae est similique Hic iste explicabo vitae
-                        temporibus quidem. Porro itaque quas expedita fugiat accusantium, harum. Quasi provident
-                        necessitatibus omnis vel sunt Quia consectetur vel exercitationem debitis aut Excepturi ut
-                        possimus suscipit in reprehenderit. Eaque natus quia! </p>
+                    <h1 class="title mb-30">Auto Deployment</h1>
+                    <p class="mb-30">When Developer wants to deploy their python project on pythonanywhere, the steps are very repetitive and time-consuming. For the same purpose I created this project. In this project, developers only need to give a github repo link and the project will take care of the rest. It will create a pythonanywhere account and clone the repo and at last generate the link of the live project.</p>
                     <ul class="information">
-                        <li><span class="title">Client:</span> Themeforest</li>
-                        <li><span class="title">Website:</span> envato.com</li>
-                        <li><span class="title">Category:</span> web, creative, photography</li>
+                        <li><span class="title">Category:</span> Automation</li>
+                        <li><span class="title">Technology:</span> Django</li>
                     </ul>
 
                     <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
