--- a/coc.html
+++ b/coc.html
@@ -11,15 +11,13 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-10 offset-md-1 mb-40">
-                    <h1 class="title mb-30">Project Title</h1>
-                    <p class="mb-30">Adipisicing tempore architecto quae est similique Hic iste explicabo vitae
-                        temporibus quidem. Porro itaque quas expedita fugiat accusantium, harum. Quasi provident
-                        necessitatibus omnis vel sunt Quia consectetur vel exercitationem debitis aut Excepturi ut
-                        possimus suscipit in reprehenderit. Eaque natus quia! </p>
+                    <h1 class="title mb-30">Certificate on chain</h1>
+                    <p class="mb-30">In this project, there are four entities, admin, universities, students, and companies or recruiters. Students can add or generate their certificates and store them on the portal which is accessed by universities and companies. Companies can request the university for a particular student’s details, and if the university approves the request then details will be shared with companies for further process. Students can block or unblock the companies by using the portal. If the university wants to block any student then they can do it. The role of the admin is to approve/block the companies and universities.</p>
+                
+
                     <ul class="information">
-                        <li><span class="title">Client:</span> Themeforest</li>
-                        <li><span class="title">Website:</span> envato.com</li>
-                        <li><span class="title">Category:</span> web, creative, photography</li>
+                        <li><span class="title">Category:</span> Website</li>
+                        <li><span class="title">Technology:</span> Django and Blockchain</li>
                     </ul>
 
                     <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
