--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="Dhiraj Beri Portfolio" />
-    <meta name="description" content="Hi, I am a Software Developer and a Blogger who likes to write Technical Blogs and contribute to Open Source." />
+    <meta name="description"
+        content="Hi, I am a Software Developer and a Blogger who likes to write Technical Blogs and contribute to Open Source." />
 
     <!--Page Title-->
     <title>Dhiraj Beri's Portfolio</title>
@@ -140,8 +141,7 @@
         <div id="main" class="site-main">
 
             <!--Banner Section Start-->
-            <section id="home" class="banner-section pt-page"
-                style="background-image: url('img/background/bg.jpg')">
+            <section id="home" class="banner-section pt-page" style="background-image: url('img/background/bg.jpg')">
 
                 <div class="banner-content">
                     <!--Banner Text-->
@@ -207,195 +207,6 @@
                         </div>
                     </div>
                     <!-- About Info Row End-->
-
-                    <!--Services Row Start-->
-                    <div class="row services mb-30">
-                        <div class="col-md-12">
-                            <div class="subheading">
-                                <h3>Services</h3>
-                            </div>
-                        </div>
-
-                        <!--Service Item-->
-                        <div class="col-lg-3 col-sm-6">
-                            <div class="service-item">
-                                <div class="icon"><i class="lnr lnr-laptop"></i></div>
-                                <h4>Web Development</h4>
-                                <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis
-                                    provident aut libero.</p>
-                            </div>
-                        </div>
-
-                        <!--Service Item-->
-                        <div class="col-lg-3 col-sm-6">
-                            <div class="service-item">
-                                <div class="icon"><i class="lnr lnr-eye"></i></div>
-                                <h4>Web Design</h4>
-                                <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis
-                                    provident aut libero.</p>
-                            </div>
-                        </div>
-
-                        <!--Service Item-->
-                        <div class="col-lg-3 col-sm-6">
-                            <div class="service-item">
-                                <div class="icon"><i class="lnr lnr-laptop-phone"></i></div>
-                                <h4>Responsive Design</h4>
-                                <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis
-                                    provident aut libero.</p>
-                            </div>
-                        </div>
-
-                        <!--Service Item-->
-                        <div class="col-lg-3 col-sm-6">
-                            <div class="service-item">
-                                <div class="icon"><i class="lnr lnr-camera"></i></div>
-                                <h4>Photography</h4>
-                                <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis
-                                    provident aut libero.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Services Row End-->
-
-                    <!--Clients Row Start-->
-                    <div class="row clients mb-70">
-                        <div class="col-md-12">
-                            <div class="subheading">
-                                <h3>Clients</h3>
-                            </div>
-                        </div>
-
-                        <div class="owl-carousel owl-theme">
-
-                            <!--Client Logo-->
-                            <div class="client-logo">
-                                <a href="#">
-                                    <img src="img/clients/client-01.png" alt="">
-                                </a>
-                            </div>
-
-                            <!--Client Logo-->
-                            <div class="client-logo">
-                                <a href="#">
-                                    <img src="img/clients/client-02.png" alt="">
-                                </a>
-                            </div>
-
-                            <!--Client Logo-->
-                            <div class="client-logo">
-                                <a href="#">
-                                    <img src="img/clients/client-03.png" alt="">
-                                </a>
-                            </div>
-
-                            <!--Client Logo-->
-                            <div class="client-logo">
-                                <a href="#">
-                                    <img src="img/clients/client-04.png" alt="">
-                                </a>
-                            </div>
-
-                            <!--Client Logo-->
-                            <div class="client-logo">
-                                <a href="#">
-                                    <img src="img/clients/client-05.png" alt="">
-                                </a>
-                            </div>
-
-                            <!--Client Logo-->
-                            <div class="client-logo">
-                                <a href="#">
-                                    <img src="img/clients/client-06.png" alt="">
-                                </a>
-                            </div>
-
-                            <!--Client Logo-->
-                            <div class="client-logo">
-                                <a href="#">
-                                    <img src="img/clients/client-07.png" alt="">
-                                </a>
-                            </div>
-
-                            <!--Client Logo-->
-                            <div class="client-logo">
-                                <a href="#">
-                                    <img src="img/clients/client-08.png" alt="">
-                                </a>
-                            </div>
-
-                            <!--Client Logo-->
-                            <div class="client-logo">
-                                <a href="#">
-                                    <img src="img/clients/client-09.png" alt="">
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-                    <!--Clients Row End-->
-
-                    <!--Testimonials Row Start-->
-                    <div class="row testimonials mb-50">
-                        <div class="col-md-12">
-                            <div class="subheading">
-                                <h3>Testimonials</h3>
-                            </div>
-                            <div class="owl-carousel owl-theme">
-
-                                <!--Testimonail Item-->
-                                <div class="testimonial-item">
-                                    <div class="testimonial-content">
-                                        <p>Ipsum ab necessitatibus numquam vitae quis. Nobis nostrum deserunt suscipit
-                                            eos fugit. Consectetur dolorum temporibus facilis impedit exercitationem
-                                            dignissimos.</p>
-                                    </div>
-                                    <div class="testimonial-meta">
-                                        <img src="img/testimonials/author-1.jpg" alt="">
-                                        <div class="meta-info">
-                                            <h4>Kate Fox</h4>
-                                            <p>Digital Marketing Executive</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!--Testimonail Item-->
-                                <div class="testimonial-item">
-                                    <div class="testimonial-content">
-                                        <p>Ipsum ab necessitatibus numquam vitae quis. Nobis nostrum deserunt suscipit
-                                            eos fugit. Consectetur dolorum temporibus facilis impedit exercitationem
-                                            dignissimos.</p>
-                                    </div>
-                                    <div class="testimonial-meta">
-                                        <img src="img/testimonials/author-2.jpg" alt="">
-                                        <div class="meta-info">
-                                            <h4>Emma Jones</h4>
-                                            <p>Creative Director</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!--Testimonail Item-->
-                                <div class="testimonial-item">
-                                    <div class="testimonial-content">
-                                        <p>Ipsum ab necessitatibus numquam vitae quis. Nobis nostrum deserunt suscipit
-                                            eos fugit. Consectetur dolorum temporibus facilis impedit exercitationem
-                                            dignissimos.</p>
-                                    </div>
-                                    <div class="testimonial-meta">
-                                        <img src="img/testimonials/author-3.jpg" alt="">
-                                        <div class="meta-info">
-                                            <h4>Jack Smith</h4>
-                                            <p>Marketing Director</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                        <!--Testimonials Row End-->
-
-                    </div>
                 </div>
             </section>
             <!--About Section Start-->
@@ -938,36 +749,7 @@
                         </div>
                     </div>
 
-                    <!--Contact Info Row Start-->
-                    <div class="row contact-info mb-70">
-
-                        <!--Contact Info Item-->
-                        <div class="col-md-4 info-item">
-                            <span class="icon"><i class="fas fa-paper-plane"></i></span>
-                            <h5><a href="mailto:example@example.com">example@example.com</a></h5>
-                        </div>
-
-                        <!--Contact Info Item-->
-                        <div class="col-md-4 info-item">
-                            <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
-                            <h5>123 Lorem Ipsum, USA</h5>
-                        </div>
-
-                        <!--Contact Info Item-->
-                        <div class="col-md-4 info-item">
-                            <span class="icon"><i class="fas fa-phone"></i></span>
-                            <h5>(+1) 123 456 7890</h5>
-                        </div>
-
-                    </div>
-                    <!--Contact Info Row End-->
-
                 </div>
-                <!--Google Map Start-->
-                <div class="google-map">
-                    <div id="map" data-latitude="-37.817214" data-longitude="144.955925" data-zoom="15"></div>
-                </div>
-                <!--Google Map End-->
             </section>
             <!--Contact Section End-->
 
