Portfolio images added

--- a/autodeploy.html
+++ b/autodeploy.html
@@ -18,8 +18,9 @@
                         <li><span class="title">Technology:</span> Django</li>
                     </ul>
 
-                    <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
-                    <figure class="mt-30"><img src="img/single-work/img-2.jpg" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/autodeploy1.png" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/autodeploy2.png" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/autodeploy3.png" alt=""></figure>
 
                 </div>
             </div>
