--- a/coc.html
+++ b/coc.html
@@ -20,8 +20,7 @@
                         <li><span class="title">Technology:</span> Django and Blockchain</li>
                     </ul>
 
-                    <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
-                    <figure class="mt-30"><img src="img/single-work/img-2.jpg" alt=""></figure>
+                    <!-- <figure class="mt-30"><img src="img/single-work/coc1.jpg" alt=""></figure> -->
 
                 </div>
             </div>
