--- a/hrbot.html
+++ b/hrbot.html
@@ -26,8 +26,7 @@
                         <li><span class="title">Technology:</span> Django, AI, ML</li>
                     </ul>
 
-                    <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
-                    <figure class="mt-30"><img src="img/single-work/img-2.jpg" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/hrbot.png" alt=""></figure>
 
                 </div>
             </div>
