--- a/placement.html
+++ b/placement.html
@@ -26,8 +26,13 @@
                         <li><span class="title">Technology:</span> Django/JS</li>
                     </ul>
 
-                    <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
-                    <figure class="mt-30"><img src="img/single-work/img-2.jpg" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/placement1.png" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/placement2.png" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/placement3.png" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/placement4.png" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/placement5.png" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/placement6.png" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/placement7.png" alt=""></figure>
 
                 </div>
             </div>
