--- a/pythonlib.html
+++ b/pythonlib.html
@@ -11,8 +11,8 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-10 offset-md-1 mb-40">
-                    <h1 class="title mb-30">Project Title</h1>
-                    <p class="mb-30">Adipisicing tempore architecto quae est similique Hic iste explicabo vitae
+                    <h1 class="title mb-30">Python Libraries</h1>
+                    <!-- <p class="mb-30">Adipisicing tempore architecto quae est similique Hic iste explicabo vitae
                         temporibus quidem. Porro itaque quas expedita fugiat accusantium, harum. Quasi provident
                         necessitatibus omnis vel sunt Quia consectetur vel exercitationem debitis aut Excepturi ut
                         possimus suscipit in reprehenderit. Eaque natus quia! </p>
@@ -20,10 +20,11 @@
                         <li><span class="title">Client:</span> Themeforest</li>
                         <li><span class="title">Website:</span> envato.com</li>
                         <li><span class="title">Category:</span> web, creative, photography</li>
-                    </ul>
+                    </ul> -->
 
-                    <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
-                    <figure class="mt-30"><img src="img/single-work/img-2.jpg" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/seopy.jpg" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/mudopy.jpg" alt=""></figure>
+                    <figure class="mt-30"><img src="img/single-work/winboost.jpg" alt=""></figure>
 
                 </div>
             </div>
