--- a/pose.html
+++ b/pose.html
@@ -11,19 +11,15 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-10 offset-md-1 mb-40">
-                    <h1 class="title mb-30">Project Title</h1>
-                    <p class="mb-30">Adipisicing tempore architecto quae est similique Hic iste explicabo vitae
-                        temporibus quidem. Porro itaque quas expedita fugiat accusantium, harum. Quasi provident
-                        necessitatibus omnis vel sunt Quia consectetur vel exercitationem debitis aut Excepturi ut
-                        possimus suscipit in reprehenderit. Eaque natus quia! </p>
+                    <h1 class="title mb-30">Pose Estimation</h1>
+                    <p class="mb-30">The goal of this project is to detect perfect human body posture. I have used mediapipe library to identify whether body posture is correct or not and used the pyttsx3 module to guide users with voice commands to accomplish perfect posture. We can expand this project to guide users for yoga and gym exercise. You can have a more clear idea about this project by looking at the video below.</p>
                     <ul class="information">
-                        <li><span class="title">Client:</span> Themeforest</li>
-                        <li><span class="title">Website:</span> envato.com</li>
-                        <li><span class="title">Category:</span> web, creative, photography</li>
+                        <li><span class="title">Category:</span> Pose Estimation</li>
+                        <li><span class="title">Technology:</span> Django/ML/OpenCV</li>
                     </ul>
 
-                    <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
-                    <figure class="mt-30"><img src="img/single-work/img-2.jpg" alt=""></figure>
+                    <!-- <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure> -->
+                    <figure class="mt-30"><video src="video/pose.mp4" height="100%" width="100%" autoplay controls="true"></video></figure>
 
                 </div>
             </div>
