--- a/property.html
+++ b/property.html
@@ -32,8 +32,7 @@
                         <li><span class="title">Technology:</span> Django, Selenium</li>
                     </ul>
 
-                    <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
-                    <figure class="mt-30"><img src="img/single-work/img-2.jpg" alt=""></figure>
+                    <figure class="mt-30"><video src="video/scrapper.mp4" height="100%" width="100%" autoplay controls="true"></video></figure>
 
                 </div>
             </div>
