--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                             class="lnr lnr-license"></i></span>Resume</a></li>
                             <li><a href="#portfolio" class="pt-link"><span class="nav-menu-icon"><i
                                             class="lnr lnr-briefcase"></i></span>Portfolio</a></li>
-                            <li><a href="https://www.codewithberi.com" class="pt-link" target="_blank"><span
+                            <li><a href="https://www.codewithberi.xyz" class="pt-link" target="_blank"><span
                                         class="nav-menu-icon"><i class="lnr lnr-book"></i></span>Blog</a></li>
                             <li><a href="#contact" class="pt-link"><span class="nav-menu-icon"><i
                                             class="lnr lnr-envelope"></i></span>Contact</a></li>
