--- a/index.html
+++ b/index.html
@@ -522,10 +522,10 @@
                         <div class="item col-lg-4 col-sm-6 design">
                             <a class="ajax-link" href="pose.html">
                                 <figure>
-                                    <img src="img/portfolio/pose.png" alt="">
+                                    <img src="img/portfolio/stocks.jpg" alt="">
                                     <figcaption>
-                                        <h4>Pose Estimation</h4>
-                                        <p>Django/ML</p>
+                                        <h4>Stock News Monitor APIs</h4>
+                                        <p>Flask</p>
                                     </figcaption>
                                 </figure>
                             </a>
