--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
                         <!--Portfolio Item-->
                         <div class="item col-lg-4 col-sm-6 design">
-                            <a class="ajax-link" href="pose.html">
+                            <a class="ajax-link" href="stocks.html">
                                 <figure>
                                     <img src="img/portfolio/stocks.jpg" alt="">
                                     <figcaption>
