--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="header-main" data-simplebar>
                     <div class="image-container">
                         <h2 class="header-name">Dhiraj Beri</h2>
-                        <img src="img/dhiraj_mac.jpg" alt="profile-pic">
+                        <img src="img/dhiraj-updated-photo.jpeg" alt="profile-pic">
                     </div>
 
                     <!--Nav Menus-->
