--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
                         <h2>My Resume.</h2>
                     </div>
 
-                    
+                    <div class="container">
+                        <iframe src="https://drive.google.com/file/d/1ZjIiH_lAj_zcllE9zUBhji4Q1CIummOW/view"></iframe>
+                    </div>
                 
                 </div>
             </section>
