--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                             class="lnr lnr-home"></i></span>Home </a> </li>
                             <li><a href="#about" class="pt-link"><span class="nav-menu-icon"><i
                                             class="lnr lnr-user"></i></span>About Me</a></li>
-                            <li><a href="#resume" class="pt-link"><span class="nav-menu-icon"><i
+                            <li><a href="https://drive.google.com/file/d/1ZjIiH_lAj_zcllE9zUBhji4Q1CIummOW/view" class="pt-link"><span class="nav-menu-icon"><i
                                             class="lnr lnr-license"></i></span>Resume</a></li>
                             <li><a href="#portfolio" class="pt-link"><span class="nav-menu-icon"><i
                                             class="lnr lnr-briefcase"></i></span>Portfolio</a></li>
