--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         </ul>
                         <!--Copyright Text-->
                         <div class="copy">
-                            <p>2021 &copy; Dhiraj Beri.<br>All Right Reserved.</p>
+                            <p>2022 &copy; Dhiraj Beri.<br>All Right Reserved.</p>
                         </div>
                     </div>
 
@@ -181,9 +181,9 @@
                                 contribute to Open Source.</p>
 
                             <!--Signature Image-->
-                            <div class="signature mt-20">
+                       <!-- <div class="signature mt-20">
                                 <img src="img/signature-white.png" alt="">
-                            </div>
+                            </div> -->
                         </div>
 
                         <!--Personal Info-->
@@ -192,16 +192,16 @@
                                 <h3 class="mb-20">Personal Information</h3>
                                 <ul>
                                     <li><span class="title">Name</span><span class="value">Dhiraj Beri</span></li>
-                                    <li><span class="title">Age</span><span class="value">21 Years</span></li>
+                                    <li><span class="title">Age</span><span class="value">22 Years</span></li>
                                     <!-- <li><span class="title">Residence</span><span class="value">New York, USA</span></li> -->
                                     <!-- <li><span class="title">Address</span><span class="value">123 Lorem Ipsum</span></li> -->
-                                    <li><span class="title">Email</span><span class="value">digitalberi@gmail.com</span>
+                                    <li><span class="title">Email</span><span class="value">dhirajberi.official@gmail.com</span>
                                     </li>
                                     <!-- <li><span class="title">Phone</span><span class="value">(+91) 123 456 7890</span></li> -->
                                     <!-- <li><span class="title">Freelance</span><span class="value">Available</span></li> -->
                                 </ul>
                                 <div class="resume-button mt-30">
-                                    <a class="btn-main" href="#">Download Resume</a>
+                                    <a class="btn-main" href="https://drive.google.com/file/d/1ZjIiH_lAj_zcllE9zUBhji4Q1CIummOW/view">Download Resume</a>
                                 </div>
                             </div>
                         </div>
