--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
                         <div class="col-lg-8">
                             <!--Personal Intro-->
                             <h3 class="mb-20">Software Developer</h3>
-                            <p>Hi, I am a Software Developer and a Blogger who likes to write Technical Blogs and
-                                contribute to Open Source.</p>
+                            <p>Hi, I am a Python developer with 1.5 years of experience. I like to learn and explore new tech stuff.</p>
 
                             <!--Signature Image-->
                        <!-- <div class="signature mt-20">
