--- a/index.html
+++ b/index.html
@@ -119,11 +119,12 @@
                     <div class="nav-footer">
                         <!--Social Links-->
                         <ul class="social">
-                            <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
-                            <li><a href="#"><i class="fab fa-youtube-square"></i></a></li>
-                            <li><a href="#"><i class="fab fa-dribbble-square"></i></a></li>
-                            <li><a href="#"><i class="fab fa-behance-square"></i></a></li>
+<!--                             <li><a href="#"><i class="fab fa-facebook-square"></i></a></li> -->
+                            <li><a href="https://twitter.com/dhirajberi2"><i class="fab fa-twitter-square"></i></a></li>
+                            <li><a href="https://www.codewithberi.xyz/"><i class="fa-solid fa-browser"></i></a></li>
+<!--                             <li><a href="#"><i class="fab fa-youtube-square"></i></a></li> -->
+<!--                             <li><a href="#"><i class="fab fa-dribbble-square"></i></a></li> -->
+<!--                             <li><a href="#"><i class="fab fa-behance-square"></i></a></li> -->
                         </ul>
                         <!--Copyright Text-->
                         <div class="copy">
