--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                         <span>I am a </span>
                         <span class="cd-words-wrapper">
                             <b class="is-visible">Python Developer</b>
-                            <b>Full Stack Developer</b>
+                            <b>Backend Developer</b>
+                            <b>Django Developer</b>
                         </span>
                     </p>
 
@@ -178,7 +179,7 @@
                         <div class="col-lg-8">
                             <!--Personal Intro-->
                             <h3 class="mb-20">Software Developer</h3>
-                            <p>Hi, I am a Python developer with 1.5 years of experience. I like to learn and explore new tech stuff.</p>
+                            <p>Hi, I am a Python developer with 1.5 years of experience. Knowledgeable in frameworks like Django, Flask, and Django Rest-framework. I like to learn and explore new tech stuff.</p>
 
                             <!--Signature Image-->
                        <!-- <div class="signature mt-20">
